Fixed layout issues for the activitymanagement-page.

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 body {
     font-family: "Open Sans";
-    font-size: 12px;
+    font-size: 14px;
     width: auto;
 	width: 970px;
     text-align: center;
@@ -33,6 +33,11 @@ textarea{
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
+}
+
+.activityInput{
+    margin-left:17px;
+    width:260px;
 }
 
 
@@ -84,12 +89,17 @@ button:hover {
     justify-content: space-around;
 }
 
+.footer{
+    float:left;
+    width:970px;
+}
+
 .activityImage{
      border-radius: 5px 5px 0px 0px;
      -webkit-border-radius: 5 5 0 0;
     -moz-border-radius: 5 5 0 0;
     background-size:cover;
-    height:200px;
+    height:240px;
     position:relative;
 }
 
@@ -98,6 +108,7 @@ button:hover {
 .itemTable{
     text-align: left;
     padding:0px 10px 10px 10px;
+    border-spacing: 10px
 }
 
 
@@ -125,6 +136,15 @@ button:hover {
     padding: 10px;
     padding-top: 10px;
     padding-bottom: 5px;
+    width: 468px;
+    margin-left: 7px;
+    margin-right: 7px;
+    height: 570px;
+    float: left;
+    margin-top: 15px;
+}
+.newActivityForm{
+    margin-top:-40px;
 }
 
 input[type=submit]{
@@ -156,9 +176,8 @@ input[type=submit]{
 
 .activityitem
 {
-    width: 320px;
-    max-height: 600px;
-    height: 500px;
+    width: 468px;
+    min-height: 570px;
 }
 
 .itemvaluename
@@ -182,9 +201,11 @@ input[type=submit]{
     display: inline-block;
     overflow: hidden;
     border: 1px solid #c5c5c5;
-    margin-right: 15px;
+    margin-right: 7px;
+    margin-left: 7px;
     margin-top: 15px;
     float: left;
+    font-size: 14px;
      border-radius: 5px;
      -webkit-border-radius: 5;
     -moz-border-radius: 5;
